Added nuget metadata

--- a/Rstolsmark.PasswordHashTool.csproj
+++ b/Rstolsmark.PasswordHashTool.csproj
@@ -5,6 +5,19 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageId>Rstolsmark.PasswordHashTool</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>ragnarstolsmark</Authors>
+    <Company>Rstolsmark</Company>
+    <Description>A .NET global tool for creating a salted hashed password.</Description>
+    <PackageTags>password;hash;passphrase;salt</PackageTags>
+    <RepositoryUrl>https://github.com/ragnarstolsmark/Rstolsmark.PasswordHashTool</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>passwordhasher</ToolCommandName>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Rstolsmark.PasswordHashLib" Version="1.0.1" />
   </ItemGroup>
